load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "math",
    srcs = ["wnaf.go"],
    importpath = "github.com/cloudflare/circl/math",
    visibility = ["//visibility:public"],
)

go_test(
    name = "math_test",
    srcs = ["wnaf_test.go"],
    embed = [":math"],
    deps = ["//internal/test"],
)
