load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pki",
    srcs = ["pki.go"],
    importpath = "github.com/cloudflare/circl/pki",
    visibility = ["//visibility:public"],
    deps = [
        "//sign",
        "//sign/schemes",
    ],
)

go_test(
    name = "pki_test",
    srcs = ["pki_test.go"],
    deps = [
        ":pki",
        "//sign/schemes",
    ],
)
