load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "xof",
    srcs = ["xof.go"],
    importpath = "github.com/cloudflare/circl/xof",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/sha3",
        "@org_golang_x_crypto//blake2b:go_default_library",
        "@org_golang_x_crypto//blake2s:go_default_library",
    ],
)

go_test(
    name = "xof_test",
    srcs = ["xof_test.go"],
    deps = [
        ":xof",
        "//internal/test",
    ],
)
