load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "polynomial",
    srcs = ["polynomial.go"],
    importpath = "github.com/cloudflare/circl/math/polynomial",
    visibility = ["//visibility:public"],
    deps = ["//group"],
)

go_test(
    name = "polynomial_test",
    srcs = ["polynomial_test.go"],
    deps = [
        ":polynomial",
        "//group",
        "//internal/test",
    ],
)
